<resources>
    <string name="app_name">StoryApp</string>
    <string name="app_icon">appIcon</string>
    <string name="login_activity_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="already_sign_up">Already Sign Up?</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="add_stories_activity_title">New post</string>
    <string name="stories_detail_activity_title">Story detail</string>
    <string name="retry">Retry</string>
    <string name="image_post">image_post</string>
    <string name="profile_pict">profile_pict</string>
    <string name="add_new_story">Add new story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_location">Add Current Location</string>
</resources>