<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="16dp"
        android:src="@drawable/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="16dp"
                android:background="@drawable/custom_input"
                android:hint="@string/name_hint"
                android:alpha="0"
                android:inputType="textPersonName"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup"
                />

            <com.example.storyapp.ui.custom.EmailEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:background="@drawable/custom_input"
                android:hint="@string/email_hint"
                android:alpha="0"
                android:inputType="textEmailAddress"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                />


            <com.example.storyapp.ui.custom.PasswordEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="16dp"
                android:background="@drawable/custom_input"
                android:layout_marginTop="20dp"
                android:hint="@string/password_hint"
                android:alpha="0"
                android:inputType="textPassword"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_sign_up" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/login_activity_title"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>